--- a/RpiLED.GUI/RpiLED.GUI.csproj
+++ b/RpiLED.GUI/RpiLED.GUI.csproj
@@ -3,6 +3,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <Platforms>AnyCPU;ARM32;ARM64</Platforms>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="Models\" />
