--- a/RpiLED.Core/RpiLED.Core.csproj
+++ b/RpiLED.Core/RpiLED.Core.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <Platforms>AnyCPU;ARM32;ARM64</Platforms>
+    <Platforms>ARM32;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
