--- a/RpiLED.Cli/RpiLED.Cli.csproj
+++ b/RpiLED.Cli/RpiLED.Cli.csproj
@@ -6,7 +6,7 @@
     <Platforms>arm;x86</Platforms>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM32'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|arm'">
     <PlatformTarget>ARM32</PlatformTarget>
   </PropertyGroup>
 
