--- a/RpiLED.Cli/RpiLED.Cli.csproj
+++ b/RpiLED.Cli/RpiLED.Cli.csproj
@@ -6,12 +6,24 @@
     <Platforms>arm;x86</Platforms>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|arm'">
-    <PlatformTarget>ARM32</PlatformTarget>
-  </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
     <PlatformTarget>x86</PlatformTarget>
+    <OutputPath>Debug</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|arm'">
+    <PlatformTarget>ARM32</PlatformTarget>
+    <OutputPath>Debug</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
+    <PlatformTarget>x86</PlatformTarget>
+    <OutputPath>Release</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|arm'">
+    <PlatformTarget>ARM32</PlatformTarget>
+    <OutputPath>Release</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
