--- a/RpiLED.Core/RpiLED.Core.csproj
+++ b/RpiLED.Core/RpiLED.Core.csproj
@@ -5,6 +5,26 @@
     <Platforms>arm;x86</Platforms>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
+    <PlatformTarget>x86</PlatformTarget>
+    <OutputPath>Debug</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|arm'">
+    <PlatformTarget>ARM32</PlatformTarget>
+    <OutputPath>Debug</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
+    <PlatformTarget>x86</PlatformTarget>
+    <OutputPath>Release</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|arm'">
+    <PlatformTarget>ARM32</PlatformTarget>
+    <OutputPath>Release</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Iot.Device.Bindings" Version="1.5.0" />
     <PackageReference Include="System.Device.Gpio" Version="1.5.0" />
