--- a/RpiLED.GUI/RpiLED.GUI.csproj
+++ b/RpiLED.GUI/RpiLED.GUI.csproj
@@ -5,6 +5,25 @@
     <Nullable>enable</Nullable>
     <Platforms>arm;x86</Platforms>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
+    <PlatformTarget>x86</PlatformTarget>
+    <OutputPath>Debug</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|arm'">
+    <PlatformTarget>ARM32</PlatformTarget>
+    <OutputPath>Debug</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
+    <PlatformTarget>x86</PlatformTarget>
+    <OutputPath>Release</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|arm'">
+    <PlatformTarget>ARM32</PlatformTarget>
+    <OutputPath>Release</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <AvaloniaResource Include="Assets\**" />
