--- a/RpiLED.Cli/RpiLED.Cli.csproj
+++ b/RpiLED.Cli/RpiLED.Cli.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <Platforms>arm;x86</Platforms>
+    <Platforms>ARM32;x86</Platforms>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
@@ -11,8 +11,8 @@
     <OutputPath>Debug</OutputPath>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|arm'">
-    <PlatformTarget>ARM32</PlatformTarget>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM32'">
+    <PlatformTarget>arm</PlatformTarget>
     <OutputPath>Debug</OutputPath>
   </PropertyGroup>
 
@@ -21,8 +21,8 @@
     <OutputPath>Release</OutputPath>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|arm'">
-    <PlatformTarget>ARM32</PlatformTarget>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM32'">
+    <PlatformTarget>arm</PlatformTarget>
     <OutputPath>Release</OutputPath>
   </PropertyGroup>
 
