--- a/RpiLED.Core/RpiLED.Core.csproj
+++ b/RpiLED.Core/RpiLED.Core.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <Platforms>arm;x86</Platforms>
+    <Platforms>ARM32;x86</Platforms>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
@@ -10,8 +10,8 @@
     <OutputPath>Debug</OutputPath>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|arm'">
-    <PlatformTarget>ARM32</PlatformTarget>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM32'">
+    <PlatformTarget>arm</PlatformTarget>
     <OutputPath>Debug</OutputPath>
   </PropertyGroup>
 
@@ -20,8 +20,8 @@
     <OutputPath>Release</OutputPath>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|arm'">
-    <PlatformTarget>ARM32</PlatformTarget>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM32'">
+    <PlatformTarget>arm</PlatformTarget>
     <OutputPath>Release</OutputPath>
   </PropertyGroup>
 
