--- a/RpiLED.Gui/RpiLED.Gui.csproj
+++ b/RpiLED.Gui/RpiLED.Gui.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <Platforms>ARM32;x86</Platforms>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="Models\" />
@@ -13,5 +14,8 @@
     <PackageReference Include="Avalonia.Desktop" Version="0.10.3" />
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.3" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.3" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RpiLED.Core\RpiLed.Core.csproj" />
   </ItemGroup>
 </Project>
