quite a few changes, introduction of PWM functionality, this doesn't build yet added PWM as an argument class added PWM handling through PwmService added PWM command added hardware & software PWM support

--- a/RpiLED.Cli/RpiLed.Cli.csproj
+++ b/RpiLED.Cli/RpiLed.Cli.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Platforms>ARM32;x86</Platforms>
+    <StartupObject>RpiLED.Cli.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
