--- a/RpiLED.Cli/Properties/AssemblyInfo.cs.template
+++ b/RpiLED.Cli/Properties/AssemblyInfo.cs.template
@@ -5,12 +5,12 @@ using System.Runtime.InteropServices;
 using System.Windows;
 
 [assembly: AssemblyTitle("@PROJECT_NAME@")]
-[assembly: AssemblyDescription("")]
+[assembly: AssemblyDescription("A full implementation of GPIO and HW/SW PWM pins")]
 [assembly: AssemblyConfiguration("")]
-[assembly: AssemblyCompany("")]
-[assembly: AssemblyProduct("")]
-[assembly: AssemblyCopyright("")]
-[assembly: AssemblyTrademark("")]
+[assembly: AssemblyCompany("TheNoviceProspect")]
+[assembly: AssemblyProduct("RpiLED")]
+[assembly: AssemblyCopyright("(c) 2000+ Sebastian Meier zu Biesen")]
+[assembly: AssemblyTrademark("... only try to realize the truth... There is no trademark.. Then you'll see that it is not the trademark that bends, it is only yourself.")]
 [assembly: AssemblyCulture("")]
 [assembly: AssemblyVersion("@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@.@PROJECT_VERSION_PATCH@.0")]
 [assembly: AssemblyFileVersion("@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@.@PROJECT_VERSION_PATCH@.0")]
