--- a/RpiLED.Cli/RpiLed.Cli.csproj
+++ b/RpiLED.Cli/RpiLed.Cli.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,17 +6,19 @@
     <PublishSingleFile>true</PublishSingleFile>
     <SelfContained>true</SelfContained>
     <RuntimeIdentifier>linux-arm</RuntimeIdentifier>
-    <Platforms>AnyCPU</Platforms>
+    <Platforms>ARM32</Platforms>
     <PublishReadyToRun>true</PublishReadyToRun>
     <StartupObject>RpiLED.Cli.Program</StartupObject>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM32'">
     <DefineConstants />
+    <PlatformTarget>ARM32</PlatformTarget>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM32'">
     <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <PlatformTarget>ARM32</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
