--- a/RpiLED.Cli/RpiLed.Cli.csproj
+++ b/RpiLED.Cli/RpiLed.Cli.csproj
@@ -5,8 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
     <PublishSingleFile>true</PublishSingleFile>
     <SelfContained>true</SelfContained>
-    <!--<RuntimeIdentifier>linux-arm</RuntimeIdentifier>-->
-    <Platforms>ARM32</Platforms>
+    <RuntimeIdentifier>linux-arm</RuntimeIdentifier>
+    <!--<Platforms>ARM32</Platforms>-->
     <PublishReadyToRun>true</PublishReadyToRun>
     <StartupObject>RpiLED.Cli.Program</StartupObject>
   </PropertyGroup>
