--- a/RpiLED.Core/RpiLed.Core.csproj
+++ b/RpiLED.Core/RpiLed.Core.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
     <PublishSingleFile>true</PublishSingleFile>
     <SelfContained>true</SelfContained>
-    <!--<RuntimeIdentifier>linux-arm</RuntimeIdentifier>-->
-    <Platforms>ARM32</Platforms>
+    <RuntimeIdentifier>linux-arm</RuntimeIdentifier>
+   <!--<Platforms>ARM32</Platforms>-->
     <PublishReadyToRun>true</PublishReadyToRun>
   </PropertyGroup>
 
