--- a/RpiLED.Gui/RpiLed.Gui.csproj
+++ b/RpiLED.Gui/RpiLed.Gui.csproj
@@ -5,8 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
     <PublishSingleFile>true</PublishSingleFile>
     <SelfContained>true</SelfContained>
-    <!--<RuntimeIdentifier>linux-arm</RuntimeIdentifier>-->
-    <Platforms>ARM32</Platforms>
+    <RuntimeIdentifier>linux-arm</RuntimeIdentifier>
+    <!--<Platforms>ARM32</Platforms>-->
     <PublishReadyToRun>true</PublishReadyToRun>
     <Nullable>enable</Nullable>
     <StartupObject>RpiLed.Gui.Program</StartupObject>
