had to add ```<RuntimeIdentifier>linux-arm</RuntimeIdentifier>``` to projects

--- a/RpiLED.Gui/RpiLed.Gui.csproj
+++ b/RpiLED.Gui/RpiLed.Gui.csproj
@@ -4,7 +4,8 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <PublishSingleFile>true</PublishSingleFile>
-    <SelfContained>true</SelfContained>
+    <SelfContained>false</SelfContained>
+    <RuntimeIdentifier>linux-arm</RuntimeIdentifier>
     <Platforms>ARM32</Platforms>
     <PublishReadyToRun>true</PublishReadyToRun>
     <Nullable>enable</Nullable>
