--- a/RpiLED.Gui/RpiLed.Gui.csproj
+++ b/RpiLED.Gui/RpiLed.Gui.csproj
@@ -4,7 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <PublishSingleFile>true</PublishSingleFile>
-    <SelfContained>false</SelfContained>
+    <SelfContained>true</SelfContained>
     <RuntimeIdentifier>linux-arm</RuntimeIdentifier>
     <Platforms>ARM32</Platforms>
     <PublishReadyToRun>true</PublishReadyToRun>
