--- a/RpiLED.Core/RpiLed.Core.csproj
+++ b/RpiLED.Core/RpiLed.Core.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <PublishSingleFile>false</PublishSingleFile>
-    <SelfContained>false</SelfContained>
+    <SelfContained>true</SelfContained>
     <RuntimeIdentifier>linux-arm</RuntimeIdentifier>
     <Platforms>ARM32</Platforms>
     <PublishReadyToRun>true</PublishReadyToRun>
