trying to get submodules working on windows

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "vendor/ConsoLovers"]
 	path = vendor/ConsoLovers
-	url = git@github.com:MzB-Solutions/ConsoLovers.git
+	#url = git@github.com:MzB-Solutions/ConsoLovers.git
 	url = https://github.com/MzB-Solutions/ConsoLovers.git
