--- a/RpiLED.Cli/RpiLed.Cli.csproj
+++ b/RpiLED.Cli/RpiLed.Cli.csproj
@@ -1,5 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
@@ -10,20 +10,25 @@
     <PublishReadyToRun>true</PublishReadyToRun>
     <StartupObject>RpiLED.Cli.Program</StartupObject>
   </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM32'">
     <DefineConstants />
     <PlatformTarget>ARM32</PlatformTarget>
   </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM32'">
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <PlatformTarget>ARM32</PlatformTarget>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\RpiLED.Core\RpiLed.Core.csproj" />
     <ProjectReference Include="..\vendor\ConsoLovers\src\ConsoLovers.ConsoleToolkit.Core\ConsoLovers.ConsoleToolkit.Core.csproj" />
+    <Content Include="Program.cs" />
+    <Content Include="Commands\PwmCommand.cs" />
+    <Content Include="Commands\PwmCommandArgs.cs" />
+    <Content Include="Commands\ReadCommand.cs" />
+    <Content Include="Commands\ReadCommandArgs.cs" />
+    <Content Include="Commands\WriteCommand.cs" />
+    <Content Include="Commands\WriteCommandArgs.cs" />
+    <Content Include="Bootstrap\AppArguments.cs" />
+    <Content Include="Bootstrap\AppBootstrap.cs" />
   </ItemGroup>
-
 </Project>
