--- a/RpiLED.Cli/RpiLed.Cli.csproj
+++ b/RpiLED.Cli/RpiLed.Cli.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <PublishSingleFile>false</PublishSingleFile>
-    <SelfContained>true</SelfContained>
+    <SelfContained>false</SelfContained>
     <Platforms>AnyCPU</Platforms>
     <PublishReadyToRun>true</PublishReadyToRun>
     <StartupObject>RpiLED.Cli.Program</StartupObject>
