--- a/RpiLED.Cli/RpiLed.Cli.csproj
+++ b/RpiLED.Cli/RpiLed.Cli.csproj
@@ -7,6 +7,7 @@
     <SelfContained>false</SelfContained>
     <Platforms>AnyCPU</Platforms>
     <PublishReadyToRun>false</PublishReadyToRun>
+    <RuntimeIdentifiers>win-x86;linux-arm;win-arm</RuntimeIdentifiers>
     <StartupObject>RpiLED.Cli.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
