--- a/RpiLED.Gui/RpiLed.Gui.csproj
+++ b/RpiLED.Gui/RpiLed.Gui.csproj
@@ -6,6 +6,7 @@
     <PublishSingleFile>false</PublishSingleFile>
     <SelfContained>false</SelfContained>
     <Platforms>AnyCPU</Platforms>
+    <RuntimeIdentifiers>win-x86;linux-arm;win-arm</RuntimeIdentifiers>
     <PublishReadyToRun>false</PublishReadyToRun>
     <Nullable>enable</Nullable>
     <StartupObject>RpiLed.Gui.Program</StartupObject>
