--- a/RpiLED.Cli/RpiLed.Cli.csproj
+++ b/RpiLED.Cli/RpiLed.Cli.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\RpiLED.Core\RpiLed.Core.csproj" />
     <ProjectReference Include="..\vendor\ConsoLovers\src\ConsoLovers.ConsoleToolkit.Core\ConsoLovers.ConsoleToolkit.Core.csproj" />
+    <ProjectReference Include="..\vendor\EasyConsole\EasyConsole.csproj" />
     <Content Include="Program.cs" />
     <Content Include="Commands\PwmCommand.cs" />
     <Content Include="Commands\PwmCommandArgs.cs" />
