--- a/RpiLED.Cli/RpiLed.Cli.csproj
+++ b/RpiLED.Cli/RpiLed.Cli.csproj
@@ -24,11 +24,11 @@
     <ProjectReference Include="..\vendor\EasyConsole\EasyConsole.csproj" />
     <Content Include="Program.cs" />
     <Content Include="Commands\PwmCommand.cs" />
-    <Content Include="Bootstrap\CommandArguments\PwmCommandArgs.cs" />
+    <Content Include="CommandArguments\PwmCommandArgs.cs" />
     <Content Include="Commands\ReadCommand.cs" />
-    <Content Include="Bootstrap\CommandArguments\ReadCommandArgs.cs" />
+    <Content Include="CommandArguments\ReadCommandArgs.cs" />
     <Content Include="Commands\WriteCommand.cs" />
-    <Content Include="Bootstrap\CommandArguments\WriteCommandArgs.cs" />
+    <Content Include="CommandArguments\WriteCommandArgs.cs" />
     <Content Include="Bootstrap\AppArguments.cs" />
     <Content Include="Bootstrap\AppBootstrap.cs" />
     <Content Include="Bootstrap\Pages\MainPage.cs" />
