--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,34 +5,12 @@
             "script": "build-cli",
             "target": "build-cli",
             "path": "",
-            "options": {
-                "env": {
-                    "CONFIGURATION": "Debug"
-                }
-            },
             "fileName": "Makefile",
             "uri": {
                 "$mid": 1,
                 "fsPath": "c:\\Users\\smzb_code\\workspace\\RaspBerryPi\\dotnet\\RpiLED\\Makefile",
                 "_sep": 1,
-                "path": "/c:/Users/smzb_code/workspace/RaspBerryPi/dotnet/RpiLED/Makefile",
-                "scheme": "file"
-            },
-            "problemMatcher": [
-                "$gcc"
-            ],
-            "label": "make: build-cli (debug)"
-        },
-        {
-            "type": "make",
-            "script": "build-cli",
-            "target": "build-cli",
-            "path": "",
-            "fileName": "Makefile",
-            "uri": {
-                "$mid": 1,
-                "fsPath": "c:\\Users\\smzb_code\\workspace\\RaspBerryPi\\dotnet\\RpiLED\\Makefile",
-                "_sep": 1,
+                "external": "file:///c%3A/Users/smzb_code/workspace/RaspBerryPi/dotnet/RpiLED/Makefile",
                 "path": "/c:/Users/smzb_code/workspace/RaspBerryPi/dotnet/RpiLED/Makefile",
                 "scheme": "file"
             },
@@ -43,8 +21,30 @@
                 "kind": "build",
                 "isDefault": true
             },
-            "label": "make: build-cli (release)"
+            "label": "build-cli"
         },
+        {
+            "type": "make",
+            "dependsOn": "build-cli",
+            "script": "publish-cli",
+            "target": "publish-cli",
+            "path": "",
+            "fileName": "Makefile",
+            "uri": {
+                "$mid": 1,
+                "fsPath": "c:\\Users\\smzb_code\\workspace\\RaspBerryPi\\dotnet\\RpiLED\\Makefile",
+                "_sep": 1,
+                "external": "file:///c%3A/Users/smzb_code/workspace/RaspBerryPi/dotnet/RpiLED/Makefile",
+                "path": "/c:/Users/smzb_code/workspace/RaspBerryPi/dotnet/RpiLED/Makefile",
+                "scheme": "file"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build",
+            "label": "publish-cli"
+        },
+
         {
             "type": "make",
             "script": "build-gui",
@@ -55,6 +55,31 @@
                 "$mid": 1,
                 "fsPath": "c:\\Users\\smzb_code\\workspace\\RaspBerryPi\\dotnet\\RpiLED\\Makefile",
                 "_sep": 1,
+                "external": "file:///c%3A/Users/smzb_code/workspace/RaspBerryPi/dotnet/RpiLED/Makefile",
+                "path": "/c:/Users/smzb_code/workspace/RaspBerryPi/dotnet/RpiLED/Makefile",
+                "scheme": "file"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "label": "build-gui"
+        },
+        {
+            "type": "make",
+            "dependsOn": "build-gui",
+            "script": "publish-gui",
+            "target": "publish-gui",
+            "path": "",
+            "fileName": "Makefile",
+            "uri": {
+                "$mid": 1,
+                "fsPath": "c:\\Users\\smzb_code\\workspace\\RaspBerryPi\\dotnet\\RpiLED\\Makefile",
+                "_sep": 1,
+                "external": "file:///c%3A/Users/smzb_code/workspace/RaspBerryPi/dotnet/RpiLED/Makefile",
                 "path": "/c:/Users/smzb_code/workspace/RaspBerryPi/dotnet/RpiLED/Makefile",
                 "scheme": "file"
             },
@@ -62,18 +87,17 @@
                 "$gcc"
             ],
             "group": "build",
-            "label": "make: build-gui (release)"
+            "label": "publish-gui"
         },
+
         {
-            "type": "make",
-            "group": "build",
-            "options": {
-                "env": {
-                    "CONFIGURATION": "Debug"
-                }
-            },
-           "problemMatcher": [],
-            "label": "make: build-gui (debug)"
+            "type": "process",
+            "command": "scp",
+            "dependsOn": ["publish-cli","publish-gui"],
+            "args": ["-rv","${workspaceFolder}/output/","pinky:~/workspace/debug"],
+            "problemMatcher":[],
+            "label": "push"
+
         }
     ]
 }
