added missing CS files to cli project fuffing about with the bitshift

--- a/RpiLED.Cli/RpiLed.Cli.csproj
+++ b/RpiLED.Cli/RpiLed.Cli.csproj
@@ -34,5 +34,7 @@
     <Content Include="Bootstrap\Pages\MainPage.cs" />
     <Content Include="Bootstrap\CliMenu.cs" />
     <Content Include="Bootstrap\Pages\SingleDigitDisplay\SingleDigitDisplayPage.cs" />
+    <Content Include="Commands\SingleCharCommand.cs" />
+    <Content Include="CommandArguments\SingleCharCommandArgs.cs" />
   </ItemGroup>
 </Project>
