added cmakefile refs in project and sln

--- a/BlinkMe/BlinkMe.vcxproj
+++ b/BlinkMe/BlinkMe.vcxproj
@@ -74,6 +74,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="CMakeLists.txt" />
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <ClCompile>
