move some defs into main.h header file amended cmakelists.txt to add .h file

--- a/BlinkMe/BlinkMe.vcxproj
+++ b/BlinkMe/BlinkMe.vcxproj
@@ -76,6 +76,9 @@
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="main.h" />
+  </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <ClCompile>
       <LinkTimeOptimization>true</LinkTimeOptimization>
