added proper references to 3rd-party header files in cmake

--- a/BlinkMe/CMakeLists.txt
+++ b/BlinkMe/CMakeLists.txt
@@ -4,6 +4,11 @@
 cmake_minimum_required (VERSION 3.8)
 
 # Add source to this project's executable.
-add_executable (CMakeBlink "main.cpp" "main.h")
+# SOME_DIRECTORY("/usr/include/wiringPi.h")
+SOME_DIRECTORY("/usr/include")
+target_include_directories(usr_includes INTERFACE ${SOME_DIRECTORY})
+set(SOURCES main.cpp main.h ${SOME_DIRECTORY}/wiringPi.h)
+
+add_executable (CMakeBlink ${SOURCES})
 
 # TODO: Add tests and install targets if needed.
