proper variables setting in cmake helps

--- a/BlinkMe/CMakeLists.txt
+++ b/BlinkMe/CMakeLists.txt
@@ -5,9 +5,9 @@ cmake_minimum_required (VERSION 3.8)
 
 # Add source to this project's executable.
 # SOME_DIRECTORY("/usr/include/wiringPi.h")
-SOME_DIRECTORY("/usr/include")
-target_include_directories(usr_includes INTERFACE ${SOME_DIRECTORY})
-set(SOURCES main.cpp main.h ${SOME_DIRECTORY}/wiringPi.h)
+set(USRLIBS "/usr/include")
+target_include_directories(usr_includes INTERFACE ${USRLIBS})
+set(SOURCES main.cpp main.h ${USRLIBS}/wiringPi.h)
 
 add_executable (CMakeBlink ${SOURCES})
 
