--- a/BlinkMe/CMakeLists.txt
+++ b/BlinkMe/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required (VERSION 3.8)
 # Add source to this project's executable.
 # SOME_DIRECTORY("/usr/include/wiringPi.h")
 set(USRLIBS "/usr/include")
-target_include_directories(usr_includes INTERFACE ${USRLIBS})
+target_include_directories(CMakeBlink INTERFACE ${USRLIBS})
 set(SOURCES main.cpp main.h ${USRLIBS}/wiringPi.h)
 
 add_executable (CMakeBlink ${SOURCES})
