forgot to add stdio.h to cmake

--- a/BlinkMe/CMakeLists.txt
+++ b/BlinkMe/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required (VERSION 3.8)
 # Add source to this project's executable.
 # SOME_DIRECTORY("/usr/include/wiringPi.h")
 set(USRLIBS "/usr/include")
-set(SOURCES main.cpp main.h ${USRLIBS}/wiringPi.h)
+set(SOURCES main.cpp main.h ${USRLIBS}/wiringPi.h ${USRLIBS}/stdio.h)
 add_executable (CMakeBlink ${SOURCES})
 target_include_directories(CMakeBlink INTERFACE ${USRLIBS})
 
