amended cmake files for better lib/target handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@
 cmake_minimum_required (VERSION 3.8)
 
 project ("CMakeBlink")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} cmake/)
 
 # Include sub-projects.
 add_subdirectory ("BlinkMe")
