again with the order of operations...

--- a/BlinkMe/CMakeLists.txt
+++ b/BlinkMe/CMakeLists.txt
@@ -8,11 +8,11 @@ cmake_minimum_required (VERSION 3.12)
 set(USRLIBS "/usr/include")
 #add_library(stdio ${USRLIBS}/stdio.h)
 #add_library(wpi ${USRLIBS}/wiringPi.h)
-target_include_directories(CMakeBlink INTERFACE ${USRLIBS}/stdio.h)
-target_include_directories(CMakeBlink INTERFACE ${USRLIBS}/wiringPi.h)
 set(SOURCES main.cpp main.h)
 add_executable (CMakeBlink ${SOURCES})
+target_include_directories(CMakeBlink INTERFACE ${USRLIBS}/stdio.h)
+target_include_directories(CMakeBlink INTERFACE ${USRLIBS}/wiringPi.h)
 #target_include_directories(CMakeBlink INTERFACE ${SOURCES})
-target_link_libraries(CMakeBlink stdio wpi)
+#target_link_libraries(CMakeBlink stdio wpi)
 
 # TODO: Add tests and install targets if needed.
