--- a/BlinkMe/CMakeLists.txt
+++ b/BlinkMe/CMakeLists.txt
@@ -1,18 +1,66 @@
-﻿# CMakeList.txt : CMake project for CMakeBlink, include source and define
-# project specific logic here.
-#
-cmake_minimum_required (VERSION 3.12)
+set(PROJECT_NAME BlinkMe)
 
-# Add source to this project's executable.
-# SOME_DIRECTORY("/usr/include/wiringPi.h")
-set(USRLIBS "/usr/include")
-#add_library(stdio ${USRLIBS}/stdio.h)
-#add_library(wpi ${USRLIBS}/wiringPi.h)
-set(SOURCES main.cpp main.h)
-add_executable (CMakeBlink ${SOURCES})
-target_include_directories(CMakeBlink INTERFACE ${USRLIBS}/stdio.h)
-target_include_directories(CMakeBlink INTERFACE ${USRLIBS}/wiringPi.h)
-#target_include_directories(CMakeBlink INTERFACE ${SOURCES})
-#target_link_libraries(CMakeBlink stdio wpi)
+################################################################################
+# Source groups
+################################################################################
+set(no_group_source_files
+    "CMakeLists.txt"
+)
+source_group("" FILES ${no_group_source_files})
 
-# TODO: Add tests and install targets if needed.
+set(Headers
+    "main.h"
+)
+source_group("Headers" FILES ${Headers})
+
+set(Sources
+    "main.cpp"
+)
+source_group("Sources" FILES ${Sources})
+
+set(ALL_FILES
+    ${no_group_source_files}
+    ${Headers}
+    ${Sources}
+)
+
+################################################################################
+# Target
+################################################################################
+
+use_props(${PROJECT_NAME} "${CMAKE_CONFIGURATION_TYPES}" "${DEFAULT_CXX_PROPS}")
+set(ROOT_NAMESPACE BlinkMe)
+
+set_target_properties(${PROJECT_NAME} PROPERTIES
+    VS_GLOBAL_KEYWORD "Linux"
+)
+################################################################################
+# Compile definitions
+################################################################################
+
+################################################################################
+# Compile and link options
+################################################################################
+if(MSVC)
+    if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "ARM")
+        target_compile_options(${PROJECT_NAME} PRIVATE
+            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
+            ${DEFAULT_CXX_EXCEPTION_HANDLING}
+        )
+    elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "ARM64")
+        target_compile_options(${PROJECT_NAME} PRIVATE
+            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
+            ${DEFAULT_CXX_EXCEPTION_HANDLING}
+        )
+    endif()
+    if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "ARM")
+        target_link_options(${PROJECT_NAME} PRIVATE
+            /DEBUG:FULL
+        )
+    elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "ARM64")
+        target_link_options(${PROJECT_NAME} PRIVATE
+            /DEBUG:FULL
+        )
+    endif()
+endif()
+
