cmake is a strange beast

--- a/BlinkMe/CMakeLists.txt
+++ b/BlinkMe/CMakeLists.txt
@@ -1,66 +1,14 @@
-set(PROJECT_NAME BlinkMe)
+﻿# CMakeList.txt : CMake project for CMakeRightApp, include source and define
+# project specific logic here.
+#
+cmake_minimum_required (VERSION 3.8)
+project ("srMe")
 
-################################################################################
-# Source groups
-################################################################################
-set(no_group_source_files
-    "CMakeLists.txt"
-)
-source_group("" FILES ${no_group_source_files})
-
-set(Headers
-    "main.h"
-)
-source_group("Headers" FILES ${Headers})
-
-set(Sources
-    "main.cpp"
-)
-source_group("Sources" FILES ${Sources})
-
-set(ALL_FILES
-    ${no_group_source_files}
-    ${Headers}
-    ${Sources}
-)
-
-################################################################################
-# Target
-################################################################################
-
-use_props(${PROJECT_NAME} "${CMAKE_CONFIGURATION_TYPES}" "${DEFAULT_CXX_PROPS}")
-set(ROOT_NAMESPACE BlinkMe)
-
-set_target_properties(${PROJECT_NAME} PROPERTIES
-    VS_GLOBAL_KEYWORD "Linux"
-)
-################################################################################
-# Compile definitions
-################################################################################
-
-################################################################################
-# Compile and link options
-################################################################################
-if(MSVC)
-    if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "ARM")
-        target_compile_options(${PROJECT_NAME} PRIVATE
-            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
-            ${DEFAULT_CXX_EXCEPTION_HANDLING}
-        )
-    elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "ARM64")
-        target_compile_options(${PROJECT_NAME} PRIVATE
-            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
-            ${DEFAULT_CXX_EXCEPTION_HANDLING}
-        )
-    endif()
-    if("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "ARM")
-        target_link_options(${PROJECT_NAME} PRIVATE
-            /DEBUG:FULL
-        )
-    elseif("${CMAKE_VS_PLATFORM_NAME}" STREQUAL "ARM64")
-        target_link_options(${PROJECT_NAME} PRIVATE
-            /DEBUG:FULL
-        )
-    endif()
-endif()
-
+#find_package(WiringPi REQUIRED)
+FILE(TO_CMAKE_PATH "C:/Users/smzb_code/AppData/Local/Microsoft/Linux/HeaderCache/1.0/-114093420/usr/include" WIRINGPI_INCLUDE_DIRS)
+FILE(TO_CMAKE_PATH "C:/Users/smzb_code/AppData/Local/Microsoft/Linux/HeaderCache/1.0/-114093420/usr/include/arm-linux-gnueabihf/bits" ARM_INCLUDE_DIRS)
+include_directories(${WIRINGPI_INCLUDE_DIRS})
+include_directories(${ARM_INCLUDE_DIRS})
+# Add source to this project's executable.
+add_executable (srMe "main.cpp" "main.h")
+# TODO: Add tests and install targets if needed.
