--- a/.gitignore
+++ b/.gitignore
@@ -493,3 +493,8 @@ FodyWeavers.xsd
 # End of https://www.toptal.com/developers/gitignore/api/c,c++,cmake,visualstudio,visualstudiocode
 
 build/
+.pio
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
