--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,32 +1,4 @@
-{
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "g++ - Build and debug active file",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                }
-            ],
-            "preLaunchTask": "C/C++: g++ build active file",
-            "miDebuggerPath": "/usr/bin/gdb"
-        }
-    ]
-}// AUTOMATICALLY GENERATED FILE. PLEASE DO NOT MODIFY IT MANUALLY
+// AUTOMATICALLY GENERATED FILE. PLEASE DO NOT MODIFY IT MANUALLY
 //
 // PIO Unified Debugger
 //
@@ -40,7 +12,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/home/smzb/workspace/cpp/PIO-leds/.pio/build/raspberrypi_3b/program",
+            "executable": "/home/smzb/workspace/cpp/RpiLED/.pio/build/raspberrypi_3b/program",
             "projectEnvName": "raspberrypi_3b",
             "toolchainBinDir": "/usr/bin",
             "internalConsoleOptions": "openOnSessionStart",
@@ -53,7 +25,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/home/smzb/workspace/cpp/PIO-leds/.pio/build/raspberrypi_3b/program",
+            "executable": "/home/smzb/workspace/cpp/RpiLED/.pio/build/raspberrypi_3b/program",
             "projectEnvName": "raspberrypi_3b",
             "toolchainBinDir": "/usr/bin",
             "internalConsoleOptions": "openOnSessionStart"
